# moi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/moi-bridge/: Cargo.toml
crates/moi-bridge/src/: lib.rs
crates/moi-cache/: Cargo.toml
crates/moi-cache/src/: lib.rs
crates/moi-core/: Cargo.toml
crates/moi-core/src/: attributes.rs  indices.rs  lib.rs  sets.rs  variable.rs
crates/moi-core/src/functions/: affine.rs  mod.rs
crates/moi-expr/: Cargo.toml
crates/moi-expr/src/: lib.rs
crates/moi-model-dummy/: Cargo.toml
crates/moi-model-dummy/examples/: fallback_usage.rs  linear_min.rs
crates/moi-model-dummy/src/: lib.rs  model.rs
crates/moi-model-dummy/tests/: objective.rs
crates/moi-nlp/: Cargo.toml
crates/moi-solver-api/: Cargo.toml
crates/moi-solver-api/src/: utils.rs
crates/moi-solver-gurobi/: Cargo.toml
crates/moi-solver-gurobi/src/: lib.rs
crates/moi-solver-gurobi/src/bindings/: gen120.rs  mod.rs
crates/moi-solver-gurobi/src/dynamic/: api.rs  loader.rs
crates/moi-solver-gurobi/src/wrapper/: wrapper.rs
crates/moi-solver-gurobi/tests/: test_api.rs  test_moi.rs
crates/moi-utils/: Cargo.toml
moi-bridge/: Cargo.toml
moi-bridge/src/: lib.rs  optimizer.rs
moi-cache/: Cargo.toml
moi-core/: Cargo.toml
moi-core/src/: attributes.rs  constraint.rs  errors.rs  indices.rs  lib.rs  model_types.rs  sets.rs  traits.rs
moi-core/src/functions/: affine.rs  function.rs  mod.rs
moi-expr/: Cargo.toml
moi-model/: Cargo.toml
moi-model-dummy/: Cargo.toml
moi-model-dummy/examples/: fallback_usage.rs  linear_min.rs
moi-model-dummy/src/: lib.rs  model.rs
moi-model-dummy/tests/: basic.rs  objective.rs  storage.rs
moi-model/examples/: linear_min.rs
moi-model/src/: lib.rs  model.rs
moi-model/tests/: basic.rs  objective.rs  storage.rs
moi-nlp/: Cargo.toml
moi-nlp/src/: lib.rs
moi-solver-api/: Cargo.toml
moi-solver-api/src/: lib.rs  optimizer.rs  status.rs  utils.rs
moi-solver-gurobi/: Cargo.toml  build.rs
moi-solver-gurobi/src/: lib.rs
moi-solver-gurobi/src/bindings/: gen120.rs  gen1203.rs  mod.rs
moi-solver-gurobi/src/dynamic/: api.rs  loader.rs  mod.rs
moi-solver-gurobi/src/include/: mod.rs
moi-solver-gurobi/src/wrapper/: mod.rs  utils.rs  wrapper.rs
moi-solver-gurobi/tests/: test_api.rs  test_moi.rs
moi-utils/: Cargo.toml
moi-utils/src/: lib.rs
moipy/: Cargo.toml  moipy.pyi  optimizer.pyi
moipy-gurobi/: Cargo.toml  pyproject.toml
moipy-gurobi/src/: lib.rs  model.rs
moipy/src/: constr.rs  expr.rs  lib.rs  model.rs  moi.rs  utils.rs  var.rs
moipy/tests/: test_model.py  test_var.py
python/moipy/: Cargo.toml  moipy.pyi  pyproject.toml
python/moipy-gurobi/: Cargo.toml
python/moipy/src/: lib.rs  utils.rs
python/moipy/tests/: test_model.py  test_moi.py
python/moirspy-gurobi/: pyproject.toml
python/moirspy-gurobi/src/: lib.rs  loader.rs  model.rs
python/moirspy/src/: env.rs  expr.rs  function.rs  model.rs  moi.rs  var.rs
python/moirspy/tests/: test_model.py
