[workspace]
members = [
    "crates/*",
    "python/*",
]
resolver = "2"

[workspace.package]
version = "0.0.1"          
edition = "2024"
authors = ["Yuzheng Liu <15956386@stu.xjtu.edu.cn>"]
license = "MIT"

[workspace.dependencies]
# 在这里统一声明依赖版本，子 crate 就不需要写版本号了
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-cp38"] }
libloading = "0.8"
# 内部依赖也在这里声明
moi-core = { path = "crates/moi-core" }
moi-solver-api = { path = "crates/moi-solver-api" }
moi-bridge = { path = "crates/moi-bridge" }
moi-solver-gurobi = { path = "crates/moi-solver-gurobi" }