[package]
name = "moipy-gurobi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moipy_gurobi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
bincode = "2.0.1"
moi-solver-gurobi = { path = "../moi-solver-gurobi" }
moi-bridge ={ path = "../moi-bridge" }
moi-solver-api = { path = "../moi-solver-api" }
