[package]
name = "moipy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
moi-core = { path = "../moi-core" }
moi-solver-api = { path = "../moi-solver-api" }
numpy = "0.27.1"
