[package]
name = "moi-solver-gurobi"
# 继承工作区的通用配置
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libloading = "0.9.0"
moi-core.workspace = true
moi-solver-api.workspace = true
moi-bridge.workspace = true

[features]
default = ["gurobi120"]
gurobi120 = []
gurobi130 = []