[package]
name = "moipy-gurobi"
version = "0.0.1"
edition.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moipy_gurobi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
bincode = "2.0.1"
moi-solver-gurobi.workspace = true
moi-bridge.workspace = true
moi-solver-api.workspace = true