[package]
name = "moipy"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.27.2"}
moi-core.workspace = true
moi-solver-api.workspace = true
moi-bridge.workspace = true
numpy = "0.27.1"
bincode = "2.0.1"
