[package]
name = "moirspy"
version = "0.0.1"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moirspy"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
moi-core.workspace = true
moi-solver-api.workspace = true
moi-bridge.workspace = true
numpy = "0.27.1"
bincode = "2.0.1"
